Changelog:
v6.1:
- fixed the happiness tooltip issue (related to @civplayer33 fix I didn't put into my code);

v6:
- compatibility with VP 2.0;

v5:
- unit list:
	- set unit name instead of unit type,
	- added tooltip to unit name ==> shows CS and RCS/Range statistics for military units; shows current health/max health (percent health),
								 ==> shows spreads left for religious units,
								 ==> shows helpt text.
	- health bar now shown under name,
	- added alternative sorting method for name: by health,
	- status: ==> worker status now shows improvement and turns left instead of static word,
			  ==> caravan status now shows turn left to finish the trade route,
			  ==> if unit is garrisoned status shows what is its current state,
			  ==> if unit is garrisoned status tooltip shows in which city, or if in fort or citadel - near which city,
	- xp: ==> value coloured if unit reached 75% (yellow) or 100% (green) xp needed to next level,
		  ==> xp tooltip now shows current unit promotions instead of repeating the info,
	- upgrade tooltip now shows CS, RCS, Range and Help text for possible new unit.
- city list:
	- fixed sorting
	- rearranged columns,
	- added culture bar,
	- added defense value and merged it with icon showing if city attack is possible; added tooltip,
	- clicking on icon for city attack zooms to city,
	- reworked city name and health bar; now longer names, health bar moved and aligned to the left,
	- added marker if city has garrison,
	- added tooltip to name: ==> shows yields,
							 ==> current health/max health (percent health).
	- added city connection icon under unhappiness value.
	- added additional sorting method for population (population number/growth), production (production turns/name) and name (also by health),
	- modified tooltips for population, culture and production,
	- added resource demand with WLTKD counter.
- added grid colours,
- alignement issues fixed,
- lowered main font,
- text revision,
- code cleaning.

v4.2: